@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <assembly xmlns="urn:schemas-microsoft-com:asm.v1" manifestVersion="1.0">
 <assemblyIdentity
-    version="2.7.0.0"
+    version="2.7.0.1"
     processorArchitecture="*"
     name="Bochs.Bochs.Bochs"
     type="win32"
