@@ -1,7 +1,7 @@
 <!--
 ================================================================
 doc/docbook/development/development.dbk
-$Id: development.dbk 14210 2021-04-01 19:36:59Z vruppert $
+$Id: development.dbk 14348 2021-10-25 15:51:36Z vruppert $
 
 This is the top level file for the Bochs Developers Manual.
 ================================================================
@@ -3569,11 +3569,12 @@ This produces two rpm files in the current directory. Test and upload.
 
 <section><title>Building the release on win32</title>
 <para>
-These instructions require cygwin and MSVC++. Use the Bochs sources from
-the SVN checkout or unpack the TAR file.
+These instructions require cygwin or mingw32/mingw64 to prepare the sources and
+MSVC++ to build the binaries. Use the Bochs sources from the SVN checkout or
+unpack the TAR file.
 </para>
 <para>
-In Cygwin:
+In Cygwin or mingw32/mingw64:
 <screen>
   sh .conf.win32-vcpp         # runs configure
   make win32_snap             # unzip workspace, make a win32 source ZIP
@@ -3592,7 +3593,6 @@ To create "bochsdbg.exe" with Bochs debugger support, manually change these
 lines in config.h to turn on the debugger and the enhanced debugger gui.
 <screen>
 #define BX_DEBUGGER 1
-#define BX_DISASM 1
 #define BX_DEBUGGER_GUI 1
 </screen>
 One of the optimization features must be turned off, since it is currently
