@@ -1,7 +1,7 @@
 <!--
 ================================================================
 doc/docbook/user/user.dbk
-$Id: user.dbk 14329 2021-08-01 07:40:18Z vruppert $
+$Id: user.dbk 14349 2021-11-04 17:44:57Z vruppert $
 
 This is the top level file for the Bochs Users Manual.
 ================================================================
@@ -1163,6 +1163,11 @@ The <replaceable>tagname</replaceable> tells which release you want, and it can 
     </thead>
     <tbody>
       <row>
+        <entry>2.7</entry>
+        <entry>REL_2_7_FINAL</entry>
+        <entry>14332</entry>
+      </row>
+      <row>
         <entry>2.6.11 (bugfix)</entry>
         <entry>REL_2_6_11_FINAL</entry>
         <entry>13774</entry>
@@ -1823,16 +1828,44 @@ Run a shortcut script using Bourne shell, like this:
   sh .conf.win32-vcpp
 </screen>
 
-These <filename>.conf.<replaceable>platform</replaceable></filename> have
-been tested in recent Bochs versions:
-<screen>
-  .conf.linux
-  .conf.sparc
-  .conf.macos
-  .conf.macosx
-  .conf.win32-vcpp
-  .conf.win32-cygwin
-</screen>
+These <filename>.conf.<replaceable>platform</replaceable></filename> scripts
+have been tested in recent Bochs versions:
+<table><title>Shortcut scripts</title>
+  <tgroup cols="2" align="left" colsep="1" rowsep="1">
+  <thead>
+    <row>
+      <entry>Name</entry>
+      <entry>Build environment</entry>
+    </row>
+  </thead>
+  <tbody>
+    <row>
+      <entry>.conf.linux</entry>
+      <entry>Linux (32/64 bit)</entry>
+    </row>
+    <row>
+      <entry>.conf.macosx</entry>
+      <entry>MacOS X</entry>
+    </row>
+    <row>
+      <entry>.conf.win32-cygwin</entry>
+      <entry>Windows with Cygwin or MinGW/MSYS</entry>
+    </row>
+    <row>
+      <entry>.conf.win32-vcpp</entry>
+      <entry>Windows with MSVC (32 bit)</entry>
+    </row>
+    <row>
+      <entry>.conf.win64-vcpp</entry>
+      <entry>Windows with MSVC (64 bit)</entry>
+    </row>
+    <row>
+      <entry>.conf.win64-cross-mingw32</entry>
+      <entry>Cross compiling on Linux for Windows</entry>
+    </row>
+  </tbody>
+  </tgroup>
+</table>
 </para>
 
 </section> <!-- end of Configure Shortcut Scripts -->
@@ -10372,16 +10405,16 @@ and <filename>SBIDE.SYS</filename> version 1.21 from Creative
 Labs<footnote>
 <para>
 To get it, go to <ulink url="http://creative.com">Creative Labs web
-site</ulink>, click on Support, then click Download Files.  You get to a screen
+site</ulink>, click on Support, then click Download Files. You get to a screen
 where you must select the operating system and the product for which you want
-the driver.  Choose DOS as the operating system, and "CD-ROM: 4x and above" as
+the driver. Choose DOS as the operating system, and "CD-ROM: 4x and above" as
 the product.  There are several choices, but you want
 <filename>sbide121.exe</filename> from April 15, 1997.  Version 2.0 does not
 work.  The download file is a self-extracting ZIP file, so on
 DOS or Windows you just run it; on other platforms you can try using
 the unzip command.  The driver is called SBIDE.SYS.  </para>
-</footnote> and OAKCDROM.SYS that comes with several versions of Windows.
-Copy the driver to your boot disk, and then set up the startup files as follows.
+</footnote>.
+Copy the driver to your boot disk, and then set up the startup files as follows:
 </para>
 <screen>
 config.sys:
